Capture API cookies_to_store from site config form
